# MobileSAM-Distill-Pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: container_smoke.yaml  local_smoke.yaml
requirements/: base.txt  dev.txt  eval.txt
scripts/container/: build.sh  smoke_import.sh
scripts/local/: benchmark_coco.sh  prepare_checkpoints.sh  prepare_coco10.sh  prepare_val5.sh
src/mobilesam_distill/: __init__.py
src/mobilesam_distill/cli/: smoke_import.py
src/mobilesam_distill/data/: __init__.py  coco10.py  sa1b.py
src/mobilesam_distill/evaluation/: __init__.py  coco_benchmark.py
src/mobilesam_distill/models/: __init__.py  aggregate.py  student.py
src/mobilesam_distill/teacher/: __init__.py  export.py
src/mobilesam_distill/training/: distill.py
weights/: README.md
